<resources>
    <string name="app_name" translatable="false">GitStar</string>
    <string name="tab_my_repositories">My Repositories</string>
    <string name="tab_search">Search</string>
    <string name="search_hint">Search repositories...</string>
    <string name="btn_view_readme">View all of %1$s</string>
    <string name="section_readme">Readme</string>
    <string name="no_readme_found">No readme found.</string>
    <string name="section_latest_commits">Latest commits</string>
    <string name="section_info">General info</string>
    <string name="not_implemented_yet">Not implemented yet.</string>
    <string name="no_commits_yet">No commits yet.</string>
    <string name="repository_successfully_starred">Repository starred. Yay!</string>
    <string name="repository_successfully_unstarred">Repository unstarred. Boo :(</string>
    <string name="failed_to_star_repository">Failed to star repository.</string>
    <string name="failed_to_unstar_repository">Failed to remove star from repository.</string>
    <string name="network_error">Network error.</string>
    <string name="btn_retry">Retry</string>
</resources>
