<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            tools:title="@string/app_name" />

    </com.google.android.material.appbar.AppBarLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/light_gray"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.core.widget.NestedScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="vertical"
            android:scrollbarStyle="outsideOverlay">

            <LinearLayout
                android:id="@+id/mainContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="36dp"
                android:clipToPadding="false"
                android:clipChildren="false"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="16dp"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:paddingBottom="8dp"
                    android:text="@string/section_info" />

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="0dp"
                    app:cardElevation="2dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/descriptionView"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingTop="12dp"
                            android:paddingLeft="16dp"
                            android:paddingRight="16dp"
                            android:paddingBottom="8dp"
                            android:textColor="?android:attr/textColorPrimary"
                            tools:text="Lorem ipsum dolor sit amet." />

                        <TextView
                            android:id="@+id/openIssuesCountView"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/descriptionView"
                            android:paddingTop="8dp"
                            android:paddingLeft="16dp"
                            android:paddingRight="16dp"
                            android:paddingBottom="8dp"
                            android:drawableLeft="@drawable/ic_source_issues_secondary_14dp"
                            android:drawableStart="@drawable/ic_source_issues_secondary_14dp"
                            android:drawablePadding="8dp"
                            android:textColor="?android:attr/textColorPrimary"
                            tools:text="161 open issues" />

                        <TextView
                            android:id="@+id/starsCountView"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/openIssuesCountView"
                            android:paddingTop="8dp"
                            android:paddingLeft="16dp"
                            android:paddingRight="16dp"
                            android:paddingBottom="8dp"
                            android:drawableLeft="@drawable/ic_source_stars_secondary_14dp"
                            android:drawableStart="@drawable/ic_source_stars_secondary_14dp"
                            android:textColor="?android:attr/textColorPrimary"
                            android:drawablePadding="8dp"
                            tools:text="329 stars" />

                        <TextView
                            android:id="@+id/watchersCountView"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/starsCountView"
                            android:paddingTop="8dp"
                            android:paddingLeft="16dp"
                            android:paddingRight="16dp"
                            android:paddingBottom="8dp"
                            android:drawableLeft="@drawable/ic_source_watchers_secondary_14dp"
                            android:drawableStart="@drawable/ic_source_watchers_secondary_14dp"
                            android:drawablePadding="8dp"
                            android:textColor="?android:attr/textColorPrimary"
                            tools:text="81 watchers" />

                        <com.nex3z.flowlayout.FlowLayout
                            android:id="@+id/topicsContainer"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/watchersCountView"
                            android:paddingTop="8dp"
                            android:paddingLeft="16dp"
                            android:paddingRight="16dp"
                            android:paddingBottom="16dp"
                            app:flFlow="true"
                            app:flChildSpacing="8dp"
                            app:flRowSpacing="8dp"
                            app:flChildSpacingForLastRow="align" />

                    </RelativeLayout>

                </androidx.cardview.widget.CardView>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="36dp"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:paddingBottom="8dp"
                    android:text="@string/section_latest_commits" />

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="0dp"
                    app:cardElevation="2dp">

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/noCommitsView"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingTop="16dp"
                            android:paddingLeft="16dp"
                            android:paddingRight="16dp"
                            android:paddingBottom="16dp"
                            android:text="@string/no_commits_yet" />

                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/commitsRecyclerView"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:scrollbars="vertical"
                            android:scrollbarStyle="outsideOverlay"
                            tools:context=".ui.main.MainActivity"
                            tools:listitem="@layout/row_commit"
                            tools:itemCount="3" />

                    </FrameLayout>

                </androidx.cardview.widget.CardView>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="36dp"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:paddingBottom="8dp"
                    android:text="@string/section_readme" />

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="0dp"
                    app:cardElevation="2dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/readmeView"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingTop="16dp"
                            android:paddingLeft="16dp"
                            android:paddingRight="16dp"
                            android:paddingBottom="16dp"
                            android:textColor="?android:attr/textColorPrimary"
                            tools:text="README" />

                        <Button
                            style="@style/App.Widget.ReadmeButton"
                            android:id="@+id/viewReadmeButton"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/btn_view_readme" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

        <ProgressBar
            style="?android:attr/progressBarStyle"
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_gravity="center"
            android:visibility="gone"
            tools:visibility="visible" />

    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>